fix some more java issues, #4036